<resources>
    <string name="app_name">coordenadas</string>
    <string name="title_activity_login">Sign in</string>
    <string name="u_email">Email</string>
    <string name="u_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_login">Entrar</string>
    <string name="capcidad_camion">Capacidad En Toneladas Enteras</string>
    <string name="marca_camion">Marca</string>
    <string name="modelo_camion">Modelo</string>
    <string name="placa_camion">Placa</string>
    <string name="serial_camion">Serial</string>
    <string name="btn_nuevo_camion">Registrar</string>

</resources>
